--- a/ios/ReactMusic/Info.plist
+++ b/ios/ReactMusic/Info.plist
@@ -35,6 +35,13 @@
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
+			<key>https://euums.baseservers.com</key>	
+			<dict>
+			    <key>NSIncludesSubdomains</key>
+            	<true/>	
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
